force-app/main/default/objects/Picklist_Translation__mdt/fields/En_Category__c.field-meta.xml
<CustomField>
    <fullName>En_Category__c</fullName>
    <label>En-Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>