force-app/main/default/objects/Picklist_Translation__mdt/fields/En_Reason__c.field-meta.xml
<CustomField>
    <fullName>En_Reason__c</fullName>
    <label>En-Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>