force-app/main/default/objects/Picklist_Translation__mdt/fields/Fr_Category__c.field-meta.xml
<CustomField>
    <fullName>Fr_Category__c</fullName>
    <label>Fr-Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>