force-app/main/default/objects/Picklist_Translation__mdt/fields/Fr_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fr_Reason__c</fullName>
    <label>Fr-Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>